IccTransformerTest is failing because of null in native library